# XLReason

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: default.yaml
docs/: experiment_instructions.md  experiment_manual.md  plan.md  progress.md  worklog.md
iqgp/: __init__.py  system.py
iqgp/data/: __init__.py  batch.py  datasets.py  mgsm.py  synthetic.py
iqgp/models/: __init__.py  backbone.py  decoders.py  lexicon.py  transformer_backbone.py
iqgp/objectives/: __init__.py  adversary.py  lexicon.py  losses.py
iqgp/planner/: __init__.py  graph.py  iqgp.py  planner.py  vq.py
iqgp/training/: __init__.py  loop.py
iqgp/utils/: __init__.py  logging.py  metrics.py  vq.py
results/: README.md  ablations.csv  agreement_breakdown.csv  code_switch_stress.csv  generate_results.py  score_comparison.csv  training_stability.csv
scripts/: train.py
tests/: test_losses.py  test_planner.py  test_reasoner.py  test_training.py
